<resources>
    <string name="app_name">Usage Tracker</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home">Mes Statestiques</string>

    <string name="data">Data</string>
    <string name="appels">Appels </string>
    <string name="messages">Messages</string>

    <!--Drawer Menu-->
    <string name="Drawer_Statestiques">Mes Statestiques</string>
    <string name="Drawer_Débiter">Débiter mon compte</string>
    <string name="Drawer_Historique">Mon Historique</string>
    <string name="Drawer_Alarmes">Mes Alarmes</string>
    <string name="Drawer_Offres">Propositions D\'offres</string>
    <string name="Drawer_Parametres">Paramères</string>
    <string name="Drawer_Propos">À propos</string>

    <!--Drawer Menu-->
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
