<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_stat"
            android:icon="@drawable/ic_menu_stat"
            android:title="@string/Drawer_Statestiques" />
        <item
            android:id="@+id/nav_debiter"
            android:icon="@drawable/ic_menu_debiter"
            android:title="@string/Drawer_Débiter" />
        <item
            android:id="@+id/nav_historique"
            android:icon="@drawable/ic_menu_log"
            android:title="@string/Drawer_Historique" />
        <item
            android:id="@+id/nav_alarmes"
            android:icon="@drawable/ic_menu_alarme"
            android:title="@string/Drawer_Alarmes" />
        <item
            android:id="@+id/nav_offre"
            android:icon="@drawable/ic_menu_offre"
            android:title="@string/Drawer_Offres" />
        <item
            android:id="@+id/nav_param"
            android:icon="@drawable/ic_menu_param"
            android:title="@string/Drawer_Parametres" />
        <item
            android:id="@+id/nav_propos"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/Drawer_Propos" />
    </group>



</menu>
